--- a/content/about/education.html
+++ b/content/about/education.html
@@ -13,7 +13,7 @@
       <p class="MsoNormal" style="margin-bottom:0in">
           <b><span style="color:black">
               Department of Life Science Engineering, University of Tehran<br></span></b>
-          <i><span style="color:black">
+          <i><span style="font-size:9.0pt; color:black">
               M.Sc. Nano-biomimetics
           </span></i>
           <span style="font-size:9.0pt; line-height:115%; color:black"><br>
@@ -35,7 +35,7 @@
     <td width="566" valign="top" style="width:5.9in; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
       <p class="MsoNormal" style="margin-bottom:0in"><b>
           <span style="color:black">School of Biology, College of Science, University of Tehran</span></b>
-          <i><span style="color:black"><br>
+          <i><span style="font-size:9.0pt; color:black">
               B.Sc. Cellular &amp; Molecular Biology</span></i>
           <span style="font-size:9.0pt; line-height:115%; color:black"><br>
               Thesis title: "<i>Assessing how microRNA target genes are related using gene ontology analysis</i>"
