--- a/content/about/education.html
+++ b/content/about/education.html
@@ -1,45 +1,78 @@
 <html lang="en">
 
-<table class="MsoNormalTable" border="1" cellspacing="0" cellpadding="0" width="715" style="margin-left:.75pt; border-collapse:collapse; border:none">
+<style>
+  .tableContainer {
+    margin-left: .75pt;
+    border-collapse: collapse;
+    border: none;
+  }
+
+  .cell {
+    width: 5.9in;
+    border: none;
+    padding: 0in 5.4pt 0in 5.4pt;
+    height: 15.75pt;
+  }
+
+  .locationCell {
+    width: 111.3pt;
+    border: none;
+    padding: 0in 5.4pt 0in 5.4pt;
+    height: 15.75pt;
+  }
+
+  .normalText {
+    margin-bottom: 0in;
+    color: black;
+  }
+
+  .italicText {
+    font-size: 9.0pt;
+    line-height: 115%;
+    color: black;
+  }
+
+  .boldText {
+    font-weight: bold;
+  }
+</style>
+
+<table class="tableContainer" border="1" cellspacing="0" cellpadding="0" width="715">
   <tr style="height:15.75pt">
-    <td width="148" valign="top" style="width:111.3pt; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
-      <p class="MsoNormal" style="margin-bottom:0in"><span style="color:black">
-          Tehran, Iran</span><i><span style="color:black"><br>
-      </span></i><i><span style="font-size:9.0pt; line-height:115%; color:black">
-          Sep 2018 - Sep 2021</span></i>
+    <td class="cell">
+      <p class="normalText boldText">
+        <span style="color:black">Department of Life Science Engineering, University of Tehran<br></span>
+      </p>
+      <p class="normalText italicText">
+        M.Sc. Nano-biomimetics
+      </p>
+      <p class="normalText italicText">
+        Thesis title: "<i>Gene regulatory network from single cell expression and DNA repair phenotype</i>"
       </p>
     </td>
-    <td width="566" valign="top" style="width:5.9in; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
-      <p class="MsoNormal" style="margin-bottom:0in">
-          <b><span style="color:black">
-              Department of Life Science Engineering, University of Tehran<br></span></b>
-          <i><span style="font-size:9.0pt; color:black">
-              M.Sc. Nano-biomimetics
-          </span></i>
-          <span style="font-size:9.0pt; line-height:115%; color:black"><br>
-              Thesis title: "<i>Gene regulatory network from single cell expression and DNA repair phenotype datasets</i>"
-          </span>
+    <td class="locationCell">
+      <p class="normalText">
+        <span style="color:black">Tehran, Iran</span><br>
+        <i>Sep 2018 - Sep 2021</i>
       </p>
     </td>
   </tr>
   <tr style="height:15.75pt">
-    <td width="148" valign="top" style="width:111.3pt; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
-      <p class="MsoNormal" style="margin-bottom:0in">
-          <span style="color:black">
-              Tehran, Iran</span><i><span style="color:black"> <br></span></i>
-          <i><span style="font-size:9.0pt; line-height:115%; color:black">
-              Sep 2013 - July 2018
-          </span></i>
+    <td class="cell">
+      <p class="normalText boldText">
+        <span style="color:black">School of Biology, College of Science, University of Tehran</span>
+      </p>
+      <p class="normalText italicText">
+        B.Sc. Cellular & Molecular Biology
+      </p>
+      <p class="normalText italicText">
+        Thesis title: "<i>Assessing how microRNA target genes are related using gene ontology analysis</i>"
       </p>
     </td>
-    <td width="566" valign="top" style="width:5.9in; border:none; padding:0in 5.4pt 0in 5.4pt; height:15.75pt">
-      <p class="MsoNormal" style="margin-bottom:0in"><b>
-          <span style="color:black">School of Biology, College of Science, University of Tehran</span></b>
-          <i><span style="font-size:9.0pt; color:black">
-              B.Sc. Cellular &amp; Molecular Biology</span></i>
-          <span style="font-size:9.0pt; line-height:115%; color:black"><br>
-              Thesis title: "<i>Assessing how microRNA target genes are related using gene ontology analysis</i>"
-          </span>
+    <td class="locationCell">
+      <p class="normalText">
+        <span style="color:black">Tehran, Iran</span><br>
+        <i>Sep 2013 - July 2018</i>
       </p>
     </td>
   </tr>
