--- a/content/about/education.html
+++ b/content/about/education.html
@@ -21,15 +21,19 @@
     height: 15.75pt;
   }
 
-  .normalText {
+  .basicText {
     margin-bottom: 0in;
     color: black;
+  }
+
+  .normalText {
+    font-style: normal;
+    line-height: 115%;
   }
 
   .italicText {
     font-style: italic;
     line-height: 115%;
-    color: black;
   }
 
   .boldText {
@@ -40,37 +44,37 @@
 <table class="tableContainer" border="1" cellspacing="0" cellpadding="0" width="715">
   <tr style="height:15.75pt">
     <td class="cell">
-      <p class="normalText boldText">
-        <span style="color:black">Department of Life Science Engineering, University of Tehran<br></span>
+      <p class="basicText boldText">
+        Department of Life Science Engineering, University of Tehran<br>
       </p>
-      <p class="normalText italicText">
+      <p class="basicText italicText">
         M.Sc. Nano-biomimetics
       </p>
-      <p class="normalText italicText">
+      <p class="basicText normalText">
         Thesis title: "<i>Gene regulatory network from single cell expression and DNA repair phenotype</i>"
       </p>
     </td>
     <td class="locationCell">
-      <p class="normalText">
-        <span style="color:black">Tehran, Iran</span><br>
+      <p class="basicText">
+        Tehran, Iran<br>
         <i>Sep 2018 - Sep 2021</i>
       </p>
     </td>
   </tr>
   <tr style="height:15.75pt">
     <td class="cell">
-      <p class="normalText boldText">
-        <span style="color:black">School of Biology, College of Science, University of Tehran</span>
+      <p class="basicText boldText">
+        School of Biology, College of Science, University of Tehran
       </p>
-      <p class="normalText italicText">
+      <p class="basicText italicText">
         B.Sc. Cellular & Molecular Biology
       </p>
-      <p class="normalText italicText">
+      <p class="basicText normalText">
         Thesis title: "<i>Assessing how microRNA target genes are related using gene ontology analysis</i>"
       </p>
     </td>
     <td class="locationCell">
-      <p class="normalText">
+      <p class="basicText">
         <span style="color:black">Tehran, Iran</span><br>
         <i>Sep 2013 - July 2018</i>
       </p>
