--- a/content/about/education.html
+++ b/content/about/education.html
@@ -39,23 +39,39 @@
   .boldText {
     font-weight: bold;
   }
+
+  .smallText {
+    font-size: 9.0pt;
+  }
+
+  midText {
+    font-size: 10.0pt;
+  }
+
+  largeText {
+    font-size: 12.0pt;
+  }
 </style>
 
 <table class="tableContainer" border="1" cellspacing="0" cellpadding="0" width="715">
   <tr style="height:15.75pt">
     <td class="cell">
-      <p class="basicText boldText">
-        Department of Life Science Engineering, University of Tehran<br>
+      <p class="basicText boldText largeText">
+        Department of Life Science Engineering | University of Tehran<br>
       </p>
-      <p class="basicText italicText">
+      <p class="basicText italicText midText">
         M.Sc. Nano-biomimetics
       </p>
-      <p class="basicText normalText">
+      <p class="basicText normalText midText">
         Thesis title: "<i>Gene regulatory network from single cell expression and DNA repair phenotype</i>"
       </p>
     </td>
     <td class="locationCell">
-      <p class="basicText">
+      <!-- add space in largeText size -->
+        <p class="basicText largeText">
+            <br>
+        </p>
+      <p class="basicText midText">
         Tehran, Iran<br>
         <i>Sep 2018 - Sep 2021</i>
       </p>
@@ -64,7 +80,7 @@
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="basicText boldText">
-        School of Biology, College of Science, University of Tehran
+        School of Biology, College of Science | University of Tehran
       </p>
       <p class="basicText italicText">
         B.Sc. Cellular & Molecular Biology
@@ -74,8 +90,12 @@
       </p>
     </td>
     <td class="locationCell">
+      <!-- add space in largeText size -->
+      <p class="basicText largeText">
+          <br>
+      </p>
       <p class="basicText">
-        <span style="color:black">Tehran, Iran</span><br>
+        Tehran, Iran<br>
         <i>Sep 2013 - July 2018</i>
       </p>
     </td>
