--- a/content/about/education.html
+++ b/content/about/education.html
@@ -44,11 +44,11 @@
     font-size: 9.0pt;
   }
 
-  midText {
+  .midText {
     font-size: 10.0pt;
   }
 
-  largeText {
+  .largeText {
     font-size: 12.0pt;
   }
 </style>
@@ -67,10 +67,6 @@
       </p>
     </td>
     <td class="locationCell">
-      <!-- add space in largeText size -->
-        <p class="basicText largeText">
-            <br>
-        </p>
       <p class="basicText midText">
         Tehran, Iran<br>
         <i>Sep 2018 - Sep 2021</i>
@@ -90,11 +86,7 @@
       </p>
     </td>
     <td class="locationCell">
-      <!-- add space in largeText size -->
-      <p class="basicText largeText">
-          <br>
-      </p>
-      <p class="basicText">
+      <p class="basicText midText">
         Tehran, Iran<br>
         <i>Sep 2013 - July 2018</i>
       </p>
