--- a/content/about/education.html
+++ b/content/about/education.html
@@ -41,15 +41,15 @@
   }
 
   .smallText {
-    font-size: 9.0pt;
-  }
-
-  .midText {
     font-size: 10.0pt;
   }
 
-  .largeText {
+  .midText {
     font-size: 12.0pt;
+  }
+
+  .largeText {
+    font-size: 14.0pt;
   }
 </style>
 
@@ -62,8 +62,8 @@
       <p class="basicText italicText midText">
         M.Sc. Nano-biomimetics
       </p>
-      <p class="basicText normalText midText">
-        Thesis title: "<i>Gene regulatory network from single cell expression and DNA repair phenotype</i>"
+      <p class="basicText normalText smallText">
+        Thesis title: "Gene regulatory network from single cell expression and DNA repair phenotype datasets"
       </p>
     </td>
     <td class="locationCell">
@@ -78,11 +78,11 @@
       <p class="basicText boldText">
         School of Biology, College of Science | University of Tehran
       </p>
-      <p class="basicText italicText">
+      <p class="basicText italicText midText">
         B.Sc. Cellular & Molecular Biology
       </p>
-      <p class="basicText normalText">
-        Thesis title: "<i>Assessing how microRNA target genes are related using gene ontology analysis</i>"
+      <p class="basicText normalText smallText">
+        Thesis title: "Assessing how microRNA target genes are related using gene ontology analysis"
       </p>
     </td>
     <td class="locationCell">
