--- a/content/about/education.html
+++ b/content/about/education.html
@@ -8,6 +8,7 @@
   }
 
   .cell {
+    vertical-align: top;
     width: 5.9in;
     border: none;
     padding: 0in 5.4pt 0in 5.4pt;
@@ -15,6 +16,7 @@
   }
 
   .locationCell {
+    vertical-align: top;
     width: 111.3pt;
     border: none;
     padding: 0in 5.4pt 0in 5.4pt;
