--- a/content/about/education.html
+++ b/content/about/education.html
@@ -58,38 +58,42 @@
 <table class="tableContainer" border="1" cellspacing="0" cellpadding="0" width="715">
   <tr style="height:15.75pt">
     <td class="cell">
-      <p class="basicText boldText largeText">
-        Department of Life Science Engineering | University of Tehran<br>
+      <p class="boldText largeText">
+        Department of Life Science Engineering | University of Tehran
       </p>
-      <p class="basicText italicText midText">
-        M.Sc. Nano-biomimetics
+      <p class="basicText midText">
+        <i>Nano-biomimetics</i>
       </p>
       <p class="basicText normalText smallText">
         Thesis title: "Gene regulatory network from single cell expression and DNA repair phenotype datasets"
       </p>
     </td>
     <td class="locationCell">
+      <p class="basicText largeText">
+        Tehran, Iran
+      </p>
       <p class="basicText midText">
-        Tehran, Iran<br>
         <i>Sep 2018 - Sep 2021</i>
       </p>
     </td>
   </tr>
   <tr style="height:15.75pt">
     <td class="cell">
-      <p class="basicText boldText">
+      <p class="boldText largeText">
         School of Biology, College of Science | University of Tehran
       </p>
-      <p class="basicText italicText midText">
-        B.Sc. Cellular & Molecular Biology
+      <p class="basicText midText">
+        <i>B.Sc. Cellular & Molecular Biology</i>
       </p>
       <p class="basicText normalText smallText">
         Thesis title: "Assessing how microRNA target genes are related using gene ontology analysis"
       </p>
     </td>
     <td class="locationCell">
+      <p class="basicText largeText">
+        Tehran, Iran
+      </p>
       <p class="basicText midText">
-        Tehran, Iran<br>
         <i>Sep 2013 - July 2018</i>
       </p>
     </td>
