--- a/content/about/education.html
+++ b/content/about/education.html
@@ -9,7 +9,7 @@
 
   .cell {
     vertical-align: top;
-    width: 5.9in;
+    width: 6in;
     border: none;
     padding: 0in 5.4pt 0in 5.4pt;
     height: 15.75pt;
@@ -17,7 +17,7 @@
 
   .locationCell {
     vertical-align: top;
-    width: 111.3pt;
+    width: 1.5in;
     border: none;
     padding: 0in 5.4pt 0in 5.4pt;
     height: 15.75pt;
@@ -72,7 +72,7 @@
       <p class="basicText largeText">
         Tehran, Iran
       </p>
-      <p class="basicText midText">
+      <p class="basicText smallText">
         <i>Sep 2018 - Sep 2021</i>
       </p>
     </td>
@@ -93,7 +93,7 @@
       <p class="basicText largeText">
         Tehran, Iran
       </p>
-      <p class="basicText midText">
+      <p class="basicText smallText">
         <i>Sep 2013 - July 2018</i>
       </p>
     </td>
