update `education.html` add M.Sc.

--- a/content/about/education.html
+++ b/content/about/education.html
@@ -62,7 +62,7 @@
         Department of Life Science Engineering | University of Tehran
       </p>
       <p class="basicText midText">
-        <i>Nano-biomimetics</i>
+        <i>M.Sc. Nano-biomimetics</i>
       </p>
       <p class="basicText normalText smallText">
         Thesis title: "Gene regulatory network from single cell expression and DNA repair phenotype datasets"
