--- a/content/about/education.html
+++ b/content/about/education.html
@@ -69,7 +69,8 @@
       </p>
     </td>
     <td class="locationCell">
-      <p class="basicText largeText">
+      <p class="basicText largeText"><br></p>
+      <p class="basicText midText">
         Tehran, Iran
       </p>
       <p class="basicText smallText">
@@ -90,7 +91,8 @@
       </p>
     </td>
     <td class="locationCell">
-      <p class="basicText largeText">
+      <p class="basicText largeText"><br></p>
+      <p class="basicText midText">
         Tehran, Iran
       </p>
       <p class="basicText smallText">
