--- a/content/about/education.html
+++ b/content/about/education.html
@@ -55,7 +55,7 @@
   }
 </style>
 
-<table class="tableContainer" border="1" cellspacing="0" cellpadding="0" width="715">
+<table class="tableContainer" border="1" cellspacing="0" cellpadding="0">
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="boldText largeText">
