--- a/content/about/education.html
+++ b/content/about/education.html
@@ -9,7 +9,7 @@
 
   .cell {
     vertical-align: top;
-    width: 4.5in;
+    width: 6in;
     border: none;
     padding: 0in 5.4pt 0in 5.4pt;
     height: 15.75pt;
@@ -17,7 +17,7 @@
 
   .locationCell {
     vertical-align: top;
-    width: 1.5in;
+    width: 2.1in;
     border: none;
     padding: 0in 5.4pt 0in 5.4pt;
     height: 15.75pt;
@@ -55,7 +55,7 @@
   }
 </style>
 
-<table class="tableContainer" border="1" cellspacing="0" cellpadding="0">
+<table class="tableContainer" border="1" cellspacing="0" cellpadding="0" width="715">
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="boldText largeText">
