--- a/content/about/research.html
+++ b/content/about/research.html
@@ -1,94 +1,391 @@
 <html lang="en">
 
+<style>
+  .tableContainer {
+    margin-left: .75pt;
+    border-collapse: collapse;
+    border: none;
+  }
 
-<table class=MsoNormalTable border=1 cellspacing=0.1 cellpadding=0 width=726
- style='border-collapse:collapse;mso-table-layout-alt:fixed;border:none;mso-yfti-tbllook:1024;mso-padding-alt:0in 5.4pt 0in 5.4pt;mso-border-insideh:
- cell-none;mso-border-insidev:cell-none'>
- <!-- Arc -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
-   <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
-    <b>Gilbert Lab and Multi-Omics Tech Center | Arc Institute</b><br>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-      Role (Job title): Senior Research Associate<br>
-      Nov 2023 to current – Supervisor: Dr. Nianzhen Li<br>
-      Role (Job title): Research Associate II<br>
-      Jul 2022 to current – Supervisor: Dr. Luke Gilbert</span></p>
-  </td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Palo Alto, USA<br><i>July 2022 – current </i></span></p>
-  </td>
- </tr>
- <!-- Harvard -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
-   <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
-    <b>Undiagnosed Diseases Network (UDN)</b> &<br><b>DBMI Harvard Medical School</b><br>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Role: Summer intern; Volunteer researcher<br>
-     Topic: <i>“Investigating biological similarities among rare disease patients”</i><br>
-     Mentor: Dr. Hadi Amiri | Supervisors: Dr. Marinka Zitnik, Dr. Isaac S. Kohane</span></p>
-  </td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Boston, USA<br><i>July 2019 – current</i></span></p>
-  </td>
- </tr>
- <!-- UCSF -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
-   <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
-    <b>University of California San Francisco (UCSF)<br></b>
-     <span style='font-size:9.0pt;line-height:115%width=300'>
-      Role (Job title): Scientific Research Assistant II<br>
-      Sep 2021 to July 2022 – Supervisor: Dr. Luke Gilbert<br>
-      Role (Job title): Junior Specialist II<br>
-      Sep 2019 to July 2020 – Supervisor: Dr. Hani Goodarzi</span>
-   </p>
-  </td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     San Francisco, USA<br><i>Sep 2019 – July 2022</i></span></p>
-  </td>
- </tr>
- <!-- Broad -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'><p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
-   <b style='mso-bidi-font-weight:normal'>
-    Broad Institute of Harvard and MIT</b><br>
-   <span style='font-size:9.0pt;line-height:115%width=300'>
-    Role: Volunteer researcher<br>
-    Topic: <i>“Co-expression of microRNAs and coding genes across cancer cell lines”</i><br>
-    Adviser: Dr. Mahmoud Ghandi</span></p>
-  </td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Boston, USA<br><i>Aug 2018 – Oct 2018</i></span></p>
-  </td>
- </tr>
- <!-- Arefian Lab -->
- <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes;height:.3in'>
-  <td width=300 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.4in'>
-   <p class=MsoNormal style='margin-top:0in;margin-right:.2in;margin-bottom:6.0pt;margin-left:0in'>
-    <b>Stem Cell Technology Research Center, Ltd.</b> &<br>
-    <b>University of Tehran</b></span>
-    <span style='font-size:9.0pt;line-height:115%width=300'><br></span></b>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Topic: <i>“microRNA regulation of Gene Expression in Glioblastoma Cells”</i><br>
-     Supervisor: Dr. Ehsan Arefian
-    </span></p></td>
-  <td width=250 valign=top style='border:none;padding:0in 5.4pt 0in 5.4pt;height:.3in'>
-   <p class=MsoNormal style='margin-bottom:0in'>
-    <span style='font-size:9.0pt;line-height:115%width=300'>
-     Tehran, Iran<br><i>Feb 2017 – Aug 2018</i></span></p>
-  </td>
+  .cell {
+    vertical-align: top;
+    width: 6.9in;
+    border: none;
+    padding: 0in 5.4pt 0in 5.4pt;
+    height: 15.75pt;
+  }
+
+  .locationCell {
+    vertical-align: top;
+    width: 2.1in;
+    border: none;
+    padding: 0in 5.4pt 0in 5.4pt;
+    height: 15.75pt;
+  }
+
+  .basicText {
+    margin-bottom: 0in;
+    color: black;
+  }
+
+  .normalText {
+    font-style: normal;
+    line-height: 115%;
+  }
+
+  .boldText {
+    font-weight: bold;
+    line-height: 115%;
+  }
+
+  .smallText {
+    font-size: 10.0pt;
+    line-height: 115%;
+  }
+
+  .midText {
+    font-size: 12.0pt;
+    line-height: 115%;
+  }
+
+  .largeText {
+    font-size: 14.0pt;
+    line-height: 115%;
+  }
+</style>
+
+<table class="tableContainer" border="1" cellspacing="0" cellpadding="0" width="715">
+  <!-- Arc Institute -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText largeText">
+        Gilbert Lab and Multi-Omics Tech Center | Arc Institute
+      </p>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText midText">
+        <!-- city, country -->
+        Palo Alto, USA
+      </p>
+    </td>
   </tr>
-</table>
+  <!-- Multi-Omics Tech Center -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="basicText midText">
+        Title: Senior Research Associate - Supervisor: Dr. Nianzhen Li
+      </p>
+      <!--<p class="basicText normalText smallText">-->
+      <!--Projects:-->
+      <!--  <ul class="basicText normalText smallText">-->
+      <!--    <li>Perform multi-omics data analysis including development of custom R, Python, Nextflow and GUI workflows.</li>-->
+      <!--    <li>Conduct CRISPR screens and single cell experiments including library preparation, QC and sequencing.</li>-->
+      <!--  </ul>-->
+      <!--</p>-->
+    </td>
+    <td class="locationCell">
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Nov 2023 - current</i><br>
+      </p>
+    </td>
+  </tr>
+  <!-- Gilbert Lab -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="basicText midText">
+        Title: Research Associate II - Supervisor: Dr. Luke Gilbert
+      </p>
+      <p class="basicText normalText smallText">
+      Projects:
+        <ul class="basicText normalText smallText">
+        <li>Multi-omics approach to study epi-{genome,transcriptome} crosstalk in Acute Myeloid Leukemia (AML)<br>
+          <a href="https://github.com/GilbertLabUCSF/Decitabine-treatment">GitHub</a> |
+          <a href="https://www.biorxiv.org/content/10.1101/2022.12.14.518457v3">Preprint</a> |
+          <a href="https://abolfazlarab.com/blog/dac_sys_bio/">Blog Post</a>
+        </li>
+<!--        <li>Functional genomics of the DNA damage response reveals a dual role for PRDX1 in protection against oxidative and reductive stress.</li>-->
+<!--        <li>Identifying chemical-genetic interactions with small molecule reactivators of p53-Y220C.</li>-->
+        <li>Engineering higher-order combinatorial perturbation platforms for functional genomics.
+          <a href="https://www.biorxiv.org/content/10.1101/2023.09.18.558350v1">Preprint</a>
+        </li>
+<!--        <li>Development and evaluation of CRISPRoff technologies at different biological contexts.</li>-->
+      </ul>
+    </td>
+    <td class="locationCell">
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Jul 2022 - current</i>
+      </p>
+    </td>
+  </tr>
 
+  <!-- Harvard -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText largeText">
+        Department of Biomedical Informatics (DBMI) | Harvard Medical School
+      </p>
+    </td>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText midText">
+        <!-- city, country -->
+        Boston, USA
+      </p>
+    </td>
+  </tr>
+  <!-- Zitnik Lab -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText midText">
+        <a href="https://zitniklab.hms.harvard.edu/">
+          Zitnik Lab | Artificial Intelligence for Medicine and Science
+        </a>
+      </p>
+      <p class="basicText midText">
+        Title: Volunteer Researcher - Supervisor: Dr. Marinka Zitnik
+      </p>
+      <p class="basicText normalText smallText">
+      Project: Defining new generalizable data loaders and tasks in artificial intelligence research on therapeutics
+        <ul class="basicText normalText smallText">
+          <li>Wrote new data loader module for knowledge graphs in
+            <a href="tdcommons.ai">Therapeutics Data Commons (TDC)</a>.</li>
+          <li>Extended
+            <a href="http://github.com/mims-harvard/primekg">Precision Medicine Knowledge Graph (PrimeKG)</a>
+            by including OMIM gene and phenotypes entries.</li>
+        </ul>
+      </p>
+    </td>
+    <td class="locationCell">
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Apr 2023 - current</i><br>
+        (remote)
+      </p>
+    </td>
+  </tr>
+  <!-- Kohane Lab -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText midText">
+        <a href="https://dbmi.hms.harvard.edu/education/sibmi">
+          Summer Institute in Biomedical Informatics (SIBMI)
+        </a>
+      </p>
+      <p class="basicText midText">
+        Title: Post-bac Fellow - Mentor: Dr. Hadi Amiri, Supervisor: Dr. Isaac S. Kohane
+      </p>
+      <p class="basicText normalText smallText">
+      Project: Biological similarities among rare disease patients at Undiagnosed Diseases Network (UDN)
+        <ul class="basicText normalText smallText">
+          <li>Clustered patients with undiagnosed disease using textual information in referral letters and EHR data.</li>
+          <li>Built automated patient phenotyping workflow using NLP representation learning techniques.</li>
+        </ul>
+    </td>
+    <td class="locationCell">
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Jul 2019 - Sep 2019</i>
+      </p>
+    </td>
+  </tr>
+
+  <!-- M.Sc. at University of Tehran -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText largeText">
+        Department of Life Science Engineering | University of Tehran
+      </p>
+    </td>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText midText">
+        <!-- city, country -->
+        Tehran, Iran
+      </p>
+    </td>
+    </tr>
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText midText">
+        <a href="https://scholar.google.com/citations?user=elIKb3YAAAAJ&hl=en">Goliaei</a> and
+        <a href="https://scholar.google.com/citations?user=p8jXoVgAAAAJ&hl=en">Mehrnejad</a> Labs
+      </p>
+      <p class="basicText midText">
+        Title: Master Student - Advisers: Dr. Sama Goliaei and Dr. Faramarz Mehrnejad
+      </p>
+      <p class="basicText normalText smallText">
+      Project:
+        <ul class="basicText normalText smallText">
+          <li>
+            Conceptualization of multi-omics single cell assays using
+            nano-biomimetic oligo probes for enzymatic activity detection. |
+            <a href="https://abearab.github.io/sc-haircut-net/thesis-slides-short.pdf">
+            Thesis Slides</a>
+          </li>
+          <li>Implemented single-cell analysis workflow and graph search
+            algorithms to study gene regulatory networks. |
+            <a href="https://github.com/abearab/sc-haircut-net">GitHub</a>
+          </li>
+        </ul>
+      </p>
+    </td>
+    <td class="locationCell">
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Jul 2020 - Sep 2021</i>
+      </p>
+    </td>
+  </tr>
+
+  <!-- UCSF -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText largeText">
+        University of California, San Francisco (UCSF)
+      </p>
+    </td>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText midText">
+        <!-- city, country -->
+        San Francisco, USA
+      </p>
+    </td>
+  </tr>
+  <!-- Gilbert Lab -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText midText">
+        <a href="">Gilbert Lab</a>
+      </p>
+
+      <p class="basicText midText">
+        Title: Scientific Research Assistant II - Supervisor: Dr. Luke Gilbert
+      </p>
+      <p class="basicText normalText smallText">
+      Projects:
+        <ul class="basicText normalText smallText">
+          <li>
+            Helped develop and publish a novel software
+            for large-scale data integration in cancer research, called
+            <a href="http://github.com/GilbertLabUCSF/CanDI">CanDI (Cancer Data Integrator)</a>.
+          </li>
+          <li>
+            Implemented deep learning models for functional genomics research, e.g.
+            <a href="https://github.com/abearab/Cancer-Cell-Encoder">Cancer-Cell-Encoder</a>.
+          </li>
+        </ul>
+    </td>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Sep 2021 - Jul 2022</i>
+    </td>
+  </tr>
+  <!-- Goodarzi Lab -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText midText">
+        <a href="">Goodarzi Lab</a>
+      </p>
+      <p class="basicText midText">
+        Title: Junior Specialist II - Supervisor: Dr. Hani Goodarzi
+      </p>
+      <p class="basicText normalText smallText">
+        Projects:
+        <ul class="basicText normalText smallText">
+        <li>Performed bulk and single cell RNA-seq data analysis of in-vitro or in-vivo drug and
+          gene perturbation studies.
+        </li>
+        <li>Implemented analytic workflow for RNA expression, stability, splicing, and m<sup>6</sup>A
+          methylation analysis.
+        </li>
+        <li>Collaborated in NGS data analysis with laboratories in UCSF, Rockefeller, Yale, Georgetown,
+          Cedars-Sinai Medical Center, Dana-Farber Cancer Institute, and Northwestern.
+        </li>
+        </ul>
+    </td>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Sep 2019 - Jul 2020</i>
+    </td>
+  </tr>
+
+  <!-- CCLE -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText largeText">
+        Broad Institute of Harvard and MIT
+      </p>
+      <p class="boldText midText">
+        Cancer Cell Line Encyclopedia (CCLE) Project
+      </p>
+
+      <p class="basicText midText">
+        Title: Volunteer Researcher - Adviser: Dr. Mahmoud Ghandi
+      </p>
+      <p class="basicText normalText smallText">
+      Project:
+        <ul class="basicText normalText smallText">
+          <li>Integrated and assessed co-expression patterns of microRNAs and target genes
+            across cancer cell lines.
+          </li>
+        </ul>
+      </p>
+    </td>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText midText">
+        <!-- city, country -->
+        Boston, USA
+      </p>
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Aug 2018 - Oct 2018</i>
+      </p>
+    </td>
+  </tr>
+
+  <!-- Arefian Lab -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText largeText">
+        Stem Cell Technology Research Center, Ltd. & University of Tehran
+      </p>
+      <p class="boldText midText">
+        <a href="https://scholar.google.com/citations?user=sYCt0-QAAAAJ&hl=en"> Arefian Lab</a>
+      </p>
+
+      <p class="basicText midText">
+        Title: Volunteer Researcher - Supervisor: Dr. Ehsan Arefian
+      </p>
+      <p class="basicText normalText smallText">
+      Project:
+        <ul class="basicText normalText smallText">
+          <li>Studied microRNA regulation of target gene expression in Glioblastoma
+            cancer cells and patients.
+          </li>
+        </ul>
+      </p>
+    </td>
+    <td class="locationCell">
+      <!--<p class="basicText largeText"><br></p>-->
+      <p class="basicText midText">
+        <!-- city, country -->
+        Tehran, Iran
+      </p>
+      <p class="basicText smallText">
+        <!-- start date - end date -->
+        <i>Feb 2017 - Aug 2018</i>
+      </p>
+    </td>
+  </tr>
+
+</table>
 
 </html>
