--- a/content/about/research.html
+++ b/content/about/research.html
@@ -4,6 +4,7 @@
   .tableContainer {
     margin-left: .75pt;
     border-collapse: collapse;
+    border-spacing: 0;
     border: none;
   }
 
@@ -57,7 +58,7 @@
 <table class="tableContainer" border="0" cellspacing="0" cellpadding="0" width="715">
   <!-- Arc Institute -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText largeText">
         Gilbert Lab and Multi-Omics Tech Center | Arc Institute
       </p>
@@ -71,7 +72,7 @@
   </tr>
   <!-- Multi-Omics Tech Center -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="basicText midText">
         Title: Senior Research Associate - Supervisor: Dr. Nianzhen Li
       </p>
@@ -92,7 +93,7 @@
   </tr>
   <!-- Gilbert Lab -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="basicText midText">
         Title: Research Associate II - Supervisor: Dr. Luke Gilbert
       </p>
@@ -122,7 +123,7 @@
 
   <!-- Harvard -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText largeText">
         Department of Biomedical Informatics (DBMI) | Harvard Medical School
       </p>
@@ -137,7 +138,7 @@
   </tr>
   <!-- Zitnik Lab -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText midText">
         <a href="https://zitniklab.hms.harvard.edu/">
           Zitnik Lab | Artificial Intelligence for Medicine and Science
@@ -167,7 +168,7 @@
   </tr>
   <!-- Kohane Lab -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText midText">
         <a href="https://dbmi.hms.harvard.edu/education/sibmi">
           Summer Institute in Biomedical Informatics (SIBMI)
@@ -193,7 +194,7 @@
 
   <!-- M.Sc. at University of Tehran -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText largeText">
         Department of Life Science Engineering | University of Tehran
       </p>
@@ -207,7 +208,7 @@
     </td>
     </tr>
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText midText">
         <a href="https://scholar.google.com/citations?user=elIKb3YAAAAJ&hl=en">Goliaei</a> and
         <a href="https://scholar.google.com/citations?user=p8jXoVgAAAAJ&hl=en">Mehrnejad</a> Labs
@@ -241,7 +242,7 @@
 
   <!-- UCSF -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText largeText">
         University of California, San Francisco (UCSF)
       </p>
@@ -256,7 +257,7 @@
   </tr>
   <!-- Gilbert Lab -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText midText">
         <a href="">Gilbert Lab</a>
       </p>
@@ -287,7 +288,7 @@
   </tr>
   <!-- Goodarzi Lab -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText midText">
         <a href="">Goodarzi Lab</a>
       </p>
@@ -318,7 +319,7 @@
 
   <!-- CCLE -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText largeText">
         Broad Institute of Harvard and MIT
       </p>
@@ -353,7 +354,7 @@
 
   <!-- Arefian Lab -->
   <tr style="height:15.75pt">
-    <td class="cell; border: none">
+    <td class="cell">
       <p class="boldText largeText">
         Stem Cell Technology Research Center, Ltd. & University of Tehran
       </p>
