--- a/content/about/research.html
+++ b/content/about/research.html
@@ -74,7 +74,7 @@
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="basicText midText">
-        Title: Senior Research Associate - Supervisor: Dr. Nianzhen Li
+        Title: Senior Research Associate
       </p>
       <!--<p class="basicText normalText smallText">-->
       <!--Projects:-->
@@ -100,6 +100,11 @@
       <p class="basicText normalText smallText">
       Projects:
         <ul class="basicText normalText smallText">
+        <li>
+          Development of a CRISPR screen analysis python toolkit, ScreenPro2 |
+          <a href="https://arcinstitute.org/tools/screenpro2/">Website</a> |
+          <a href="https://github.com/ArcInstitute/ScreenPro2">GitHub</a>
+        </li>
         <li>Multi-omics approach to study epi-{genome,transcriptome} crosstalk in Acute Myeloid Leukemia (AML)<br>
           <a href="https://github.com/GilbertLabUCSF/Decitabine-treatment">GitHub</a> |
           <a href="https://www.biorxiv.org/content/10.1101/2022.12.14.518457v3">Preprint</a> |
@@ -145,7 +150,8 @@
         </a>
       </p>
       <p class="basicText midText">
-        Title: Volunteer Researcher - Supervisor: Dr. Marinka Zitnik
+        Title: Volunteer Researcher<br>
+        Supervisor: Dr. Marinka Zitnik
       </p>
       <p class="basicText normalText smallText">
       Project: Defining new generalizable data loaders and tasks in artificial intelligence research on therapeutics
@@ -175,7 +181,9 @@
         </a>
       </p>
       <p class="basicText midText">
-        Title: Post-bac Fellow - Mentor: Dr. Hadi Amiri, Supervisor: Dr. Isaac S. Kohane
+        Title: Post-bac Fellow<br>
+        Mentor: Dr. Hadi Amiri<br>
+        Supervisor: Dr. Isaac S. Kohane
       </p>
       <p class="basicText normalText smallText">
       Project: Biological similarities among rare disease patients at Undiagnosed Diseases Network (UDN)
@@ -214,7 +222,8 @@
         <a href="https://scholar.google.com/citations?user=p8jXoVgAAAAJ&hl=en">Mehrnejad</a> Labs
       </p>
       <p class="basicText midText">
-        Title: Master Student - Advisers: Dr. Sama Goliaei and Dr. Faramarz Mehrnejad
+        Title: Master Student<br>
+        Advisers: Dr. Sama Goliaei and Dr. Faramarz Mehrnejad
       </p>
       <p class="basicText normalText smallText">
       Project:
@@ -259,11 +268,11 @@
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="boldText midText">
-        <a href="">Gilbert Lab</a>
+        <a href="https://www.gilbertlabucsf.com/">Gilbert Lab</a>
       </p>
 
       <p class="basicText midText">
-        Title: Scientific Research Assistant II - Supervisor: Dr. Luke Gilbert
+        Title: Scientific Research Assistant II
       </p>
       <p class="basicText normalText smallText">
       Projects:
@@ -293,7 +302,7 @@
         <a href="">Goodarzi Lab</a>
       </p>
       <p class="basicText midText">
-        Title: Junior Specialist II - Supervisor: Dr. Hani Goodarzi
+        Title: Junior Specialist II
       </p>
       <p class="basicText normalText smallText">
         Projects:
@@ -328,7 +337,8 @@
       </p>
 
       <p class="basicText midText">
-        Title: Volunteer Researcher - Adviser: Dr. Mahmoud Ghandi
+        Title: Volunteer Researcher<br>
+        Adviser: Dr. Mahmoud Ghandi
       </p>
       <p class="basicText normalText smallText">
       Project:
@@ -363,7 +373,7 @@
       </p>
 
       <p class="basicText midText">
-        Title: Volunteer Researcher - Supervisor: Dr. Ehsan Arefian
+        Title: Volunteer Researcher
       </p>
       <p class="basicText normalText smallText">
       Project:
