--- a/content/about/research.html
+++ b/content/about/research.html
@@ -112,7 +112,7 @@
         </li>
 <!--        <li>Functional genomics of the DNA damage response reveals a dual role for PRDX1 in protection against oxidative and reductive stress.</li>-->
 <!--        <li>Identifying chemical-genetic interactions with small molecule reactivators of p53-Y220C.</li>-->
-        <li>Engineering higher-order combinatorial perturbation platforms for functional genomics.
+        <li>Engineering higher-order combinatorial perturbation platforms for functional genomics.<br>
           <a href="https://www.biorxiv.org/content/10.1101/2023.09.18.558350v1">Preprint</a>
         </li>
 <!--        <li>Development and evaluation of CRISPRoff technologies at different biological contexts.</li>-->
